UI: minor fixes

--- a/crmapp/frontend/src/app/components/agreement/agreements/agreements.component.html
+++ b/crmapp/frontend/src/app/components/agreement/agreements/agreements.component.html
@@ -41,7 +41,7 @@
                                 </td>
                                 <td class="text-right">
                                     <a class="btn btn-info btn-sm"
-                                        [routerLink]="['/agreements', agreement.id]">
+                                        [routerLink]="['/agreements', agreement?.id]">
                                         <i class="fa fa-arrow-circle-o-right"></i> Подробнее
                                     </a>
                                 </td>
