--- a/crmapp/frontend/src/app/components/client/client-details/client-details-tabs/client-details-tabs.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-tabs/client-details-tabs.component.html
@@ -39,7 +39,7 @@
       routerLinkActive="active"
       routerLink="agreements">
       <i class="fa fa-file-text-o">
-        </i> <strong>Документооборот</strong>
+        </i> <strong>Договоры</strong>
     </a>
   </li>
   
