--- a/crmapp/frontend/src/app/components/navbar/navbar.component.html
+++ b/crmapp/frontend/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,10 @@
+<!-- <p-menubar [model]="items">
+  <div>
+      <input type="text" pInputText placeholder="Search">
+      <button pButton label="Logout" icon="fa-sign-out"></button>
+  </div>
+</p-menubar> -->
+
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: rgb(77, 93, 105);">
   <a class="navbar-brand" routerLink="/">CRMApp</a>
     <button 
