--- a/crmapp/frontend/src/app/components/client/clients/clients.component.html
+++ b/crmapp/frontend/src/app/components/client/clients/clients.component.html
@@ -1,92 +1,41 @@
-<div class="card">
-    <h5 class="card-header text-center">
-        <strong>
-            <i class="fa fa-users"></i> Клиенты
-        </strong>
-    </h5>
-    
-    <div class="card-body">
-
-        <div class="row">
-            <div class="col-md-10">
-
-                <div class="card">
-                    <div class="card-body"> 
-                      
-                        <table *ngIf="clients?.length > 0; else noClients" 
-                            class="table table-sm">
-                        
-                        <thead class="thead-default">
-                        <tr>
-                            <th class="text-center">Название</th>
-                            <th class="text-center">ЕДРПОУ</th>
-                            <th class="text-center"></th>
-                        </tr>
-                        </thead>
-                    
-                        <tr *ngFor="let client of clients">
-                            
-                            <td class="text-center">
-                                {{client.title}}
-                            </td>
-                            <td class="text-center">
-                                {{client.edrpou}}
-                            </td>
-                            <td class="text-right">
-                                <div class="btn-group">
-                                    <a class="btn btn-info btn-sm"
-                                        [routerLink]="['/clients', client?.id]">
-                                        <i class="fa fa-arrow-circle-o-right">
-                                            </i> Подробнее
-                                    </a>
-                                    <button 
-                                        type="button" 
-                                        class="btn btn-info btn-sm dropdown-toggle dropdown-toggle-split" 
-                                        data-toggle="dropdown" 
-                                        aria-haspopup="true" 
-                                        aria-expanded="false">
-                                        <span class="sr-only"></span>
-                                    </button>
-                                    <div class="dropdown-menu dropdown-menu-right">
-                                        <a class="dropdown-item" 
-                                            [routerLink]="['/clients', client?.id, 'addresses']">Адресы
-                                        </a>
-                                        <a class="dropdown-item" 
-                                            [routerLink]="['/clients', client?.id, 'accounts']">Банковские реквизиты
-                                        </a>
-                                        <a class="dropdown-item" 
-                                            [routerLink]="['/clients', client?.id, 'directors']">Руководители
-                                        </a>
-                                        <a class="dropdown-item" 
-                                            [routerLink]="['/clients', client?.id, 'agreements']">Документооборот
-                                        </a>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
-                            
-                    </table>
-
-                </div>
+<p-table [columns]="columns" [responsive]="true"
+    [value]="clients" [reorderableColumns]="true" 
+    [paginator]="true" [rows]="10">
+    <ng-template pTemplate="caption">
+            <div class="ui-helper-clearfix">
+                    <span style="font-size:18px;float:left">
+                        <b>Клиенты</b>
+                    </span>
+                <p-button icon="fa fa-plus-circle" style="float:right" 
+                    label="Добавить" [routerLink]="['/clients/add']">
+                </p-button>
             </div>
-            
-            <ng-template #noClients>
-                <div class="alert alert-light" role="alert">
-                    <h6 class="lead text-center">
-                        <b>Нет ни одного клиента в системе...</b>
-                    </h6>
-                </div>
-            </ng-template>
-
-            </div>
-            <div class="col-md-2">
-                <app-sidebar [url] = "['/clients/add']" [title] = "['Добавить']"></app-sidebar>
-            </div>
-
-        </div>
-
-    </div>
-
-</div>
-
-
+        </ng-template>
+    <ng-template pTemplate="header" let-columns>
+        <tr>
+            <th *ngFor="let column of columns" class="text-center" 
+                [pSortableColumn]="column.field" pReorderableColumn>
+                {{column.header}}
+                <p-sortIcon [field]="column.field"></p-sortIcon>
+            </th>
+            <th></th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-client let-rowData let-columns="columns">
+        <tr>
+            <td *ngFor="let column of columns" class="text-center">
+                <span class="ui-column-title">{{column.header}}</span>
+                {{rowData[column.field]}}
+            </td>
+            <td class="text-center">
+                <button pButton type="button" class="ui-button-info" 
+                    icon="fa-arrow-circle-o-right" label="Подробнее" 
+                    [routerLink]="['/clients', client?.id]">
+                </button>
+            </td>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="summary">
+        Кол-во записей: {{clients?.length}} шт.
+    </ng-template>
+</p-table>
