--- a/crmapp/frontend/src/app/components/employee/employee-details/employee-details-main-tab/employee-details-main-tab.component.html
+++ b/crmapp/frontend/src/app/components/employee/employee-details/employee-details-main-tab/employee-details-main-tab.component.html
@@ -101,35 +101,10 @@
     <button 
       type="button" 
       class="btn btn-danger btn-block" 
-      data-toggle="modal" 
-      data-target="#exampleModal">
+      (click)="delete()">
         <i class="fa fa-trash-o">
           </i> Удалить
     </button>
-    
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">
-              Удаление объекта
-            </h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            Действительно удалить объект?
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-link" data-dismiss="modal">Отмена</button>
-            <button type="button" class="btn btn-danger" (click)="delete()">
-              <i class="fa fa-trash-o"></i> Удалить</button>
-          </div>
-        </div>
-      </div>
-    </div>
 
   </div>
 
