--- a/crmapp/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/crmapp/frontend/src/app/components/sidebar/sidebar.component.html
@@ -1,3 +1,4 @@
-<a routerLink="{{url}}" class="btn btn-primary btn-block">
-    <i class="fa fa-plus-circle"></i> {{title}}
-</a>
+<button pButton type="button" label="{{title}}" 
+    class="{{classButton}}" icon="{{icon}}"
+    routerLink="{{url}}">
+</button>
