--- a/crmapp/frontend/src/app/components/client/client-details/client-details-directors-tab/client-details-directors-tab.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-directors-tab/client-details-directors-tab.component.html
@@ -1,61 +1,38 @@
-<P>
-
-<div class="row">
-
-  <div class="col-md-10">
-
-    <div class="card">
-      <div class="card-body"> 
-
-        <table class="table table-sm"
-          *ngIf="directors?.length > 0; else noDirectors">
-
-          <thead class="thead-default">
-            <tr>
-              <th class="text-center">ID</th>
-              <th class="text-center">ФИО</th>
-              <th class="text-center">Должность</th>
-              <th class="text-center">Актуален с</th>
-              <th class="text-center"></th>
-            </tr>
-          </thead>
-          
-          <tr *ngFor="let director of directors">
-            
-            <td class="text-center" >{{director.id}}</td>
-            <td class="text-center" >{{director.shortName}}</td>
-            <td class="text-center" >{{director.post.title}}</td>
-            <td class="text-center" >{{director.dateStart | date: 'dd.MM.y'}}</td>
-            <td>
-              <div class="d-flex justify-content-end">
-                <div class="btn-toolbar">
-                  <div class="btn-group mr-2">
-                    <a class="btn btn-success btn-sm" 
-                      [routerLink]="[director?.id, 'edit']">
-                      <i class="fa fa-edit"></i> Изменить
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </td>
-          </tr>
-        </table>
-
-        <ng-template #noDirectors>
-          <div class="alert alert-light" role="alert">
-            <h6 class="lead text-center">
-              <b>Нет ни одного руководителя в системе ...</b>
-            </h6>
-          </div>
-        </ng-template>
-
-      </div>
-    </div>
-
+<div class="ui-g-12">
+  <div class="ui-g-10">
+    <p-table [value]="directors" [columns]="columns" [responsive]="true">
+      <ng-template pTemplate="header">
+        <tr>
+          <th style="width:7%;text-align:center">ID</th>
+          <th style="text-align:center">ФИО</th>
+          <th style="width:25%;text-align:center">Должность</th>
+          <th style="width:15%;text-align:center">Актуален с</th>
+          <th style="width:15%;text-align:center"></th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-director let-columns="columns">
+        <tr>
+          <td style="text-align:center">{{director.id}}</td>
+          <td style="text-align:start">{{director.shortName}}</td>
+          <td style="text-align:center">{{director.post.title}}</td>
+          <td style="text-align:center">{{director.dateStart  | date: 'dd.MM.y'}}</td>
+          <td style="text-align:center">
+            <button pButton type="button" label="Изменить" 
+              class="ui-button-success btn-block" icon="fa fa-edit"
+              [routerLink]="[director?.id, 'edit']">
+            </button>
+          </td>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="summary">
+          Кол-во записей: {{directors?.length}}
+      </ng-template>
+    </p-table>
   </div>
-
-  <div class="col-md-2">
-    <app-sidebar [url] = "['add']" title = "Добавить"></app-sidebar>
+  <div class="ui-g-2">
+    <button pButton type="button" label="Добавить" 
+      class="ui-button-primary btn-block" icon="fa fa-plus-circle"
+      [routerLink]="['add']">
+    </button>
   </div>
-  
 </div>
