UI: first attempt to introduce p-panelMenu (hardcoded)

--- a/crmapp/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/crmapp/frontend/src/app/components/dashboard/dashboard.component.html
@@ -1,31 +1,17 @@
-<!-- <div class="ui-g">
+<div class="ui-g">
 
     <div class="ui-g-12 ui-md-3">
         
-        <p-panelMenu [model]="items" ></p-panelMenu>
+        <p-panelMenu [model]="items" [multiple]="false"></p-panelMenu>
 
     </div>
-
-    <div class="ui-g-12 ui-md-9 ui-g-nopad">
-            <div class="ui-g-12">
-                <p-menubar [model]="items">
-                    
-                  </p-menubar>
-            </div>
-            <div class="ui-g-12 ui-g-nopad">
-                <div class="ui-g-12">
-               
-                    <router-outlet></router-outlet> 
-         
-                </div>
-            </div>
-
+    <div class="ui-g-12 ui-md-9">
+        <router-outlet></router-outlet> 
     </div>
 
-    
-</div> -->
+</div>
 
-<div class="row">
+<!-- <div class="row">
     <div class="col-md-3">
 
         <div class="list-group" >
@@ -43,4 +29,4 @@
         <router-outlet></router-outlet> 
     </div>
 
-</div>
+</div> -->
