--- a/crmapp/frontend/src/app/components/client/client-details/client-details-main-tab/client-details-main-tab.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-main-tab/client-details-main-tab.component.html
@@ -1,5 +1,3 @@
-<p>
-
 <p-growl [value]="msgs"></p-growl>
 
 <p-confirmDialog header="Confirmation" icon="fa fa-question-circle" width="425" #cd>
@@ -13,92 +11,20 @@
 
 <div class="ui-g-12">
     <div class="ui-g-10">
-
-        <div class="card">
-            <div class="card-body"> 
-      
-              <div class="form-group row">
-                <label 
-                  for="title" 
-                  class="col-md-3 col-form-label">
-                  <strong>Полное название</strong>
-                </label>
-                <div class="col-md">
-                  <input 
-                    type="text" 
-                    readonly 
-                    class="form-control-plaintext"  
-                    name="title"
-                    value="{{client?.title}}">
-                </div>
-              </div>
-      
-              <div class="form-group row">
-                <label 
-                  for="alias" 
-                  class="col-md-3 col-form-label">
-                  <strong>Псевдоним</strong>
-                </label>
-                <div class="col-md">
-                  <input 
-                    type="text" 
-                    class="form-control-plaintext"
-                    value="{{client?.alias}}" 
-                    name="alias"
-                    readonly>
-                </div>
-              </div>
-      
-              <div class="form-group row">
-                <label 
-                  for="edrpou" 
-                  class="col-md-3 col-form-label">
-                  <strong>ЕДРПОУ</strong>
-                </label>
-                <div class="col-md">
-                  <input 
-                    type="text" 
-                    class="form-control-plaintext"
-                    value="{{client?.edrpou}}" 
-                    name="edrpou"
-                    readonly>
-                </div>
-              </div>
-              
-              <div class="form-group row">
-                <label 
-                  for="inn" 
-                  class="col-md-3 col-form-label">
-                  <strong>ИНН</strong>
-                </label>
-                <div class="col-md">
-                  <input 
-                    type="text" 
-                    class="form-control-plaintext"
-                    value="{{client?.inn}}" 
-                    name="inn"
-                    readonly>
-                </div>
-              </div>
-                
-              <div class="form-group row">
-                <label 
-                  for="vatCertificate" 
-                  class="col-md-3 col-form-label">
-                  <strong>№ свидетельства плат. НДС</strong>
-                </label>
-                <div class="col-md">
-                  <input 
-                    type="text" 
-                    class="form-control-plaintext"
-                    value="{{client?.vatCertificate}}" 
-                    name="vatCertificate"
-                    readonly>
-                </div>
-              </div>
-        
-            </div>
+      <p-card>
+        <div class="ui-g">
+            <div class="ui-g-4 ui-sm-6"><b>Полное название:</b></div>
+            <div class="ui-g-8 ui-sm-6">{{client?.title}}</div>
+            <div class="ui-g-4 ui-sm-6"><b>Псевдоним:</b></div>
+            <div class="ui-g-8 ui-sm-6">{{client?.alias}}</div>
+            <div class="ui-g-4 ui-sm-6"><b>ЕДРПОУ:</b></div>
+            <div class="ui-g-8 ui-sm-6">{{client?.edrpou}}</div>
+            <div class="ui-g-4 ui-sm-6"><b>ИНН:</b></div>
+            <div class="ui-g-8 ui-sm-6">{{client?.inn}}</div>
+            <div class="ui-g-4 ui-sm-6"><b>№ свидетельства плат. НДС:</b></div>
+            <div class="ui-g-8 ui-sm-6">{{client?.vatCertificate}}</div>
           </div>
+      </p-card>
     </div>
     <div class="ui-g-2">
         <button pButton type="button" label="Изменить" 
@@ -111,4 +37,3 @@
         </button>
     </div>
 </div>
-
