UI: moved p-panelMenu to dashboard-menu and injected it

--- a/crmapp/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/crmapp/frontend/src/app/components/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="ui-g">
     <div class="ui-g-12 ui-md-3">
-        <p-panelMenu [model]="items" [multiple]="false"></p-panelMenu>
+        <app-dashboard-menu></app-dashboard-menu>
     </div>
     <div class="ui-g-12 ui-md-9">
         <router-outlet></router-outlet> 
