UI: routerLink fixed

--- a/crmapp/frontend/src/app/components/client/client-details/client-details-main-tab/client-details-main-tab.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-main-tab/client-details-main-tab.component.html
@@ -29,7 +29,7 @@
     <div class="ui-g-2">
         <button pButton type="button" label="Изменить" 
           class="ui-button-success btn-block" icon="fa fa-edit"
-          [routerLink]="['/clients', client?.id, 'edit']">
+          [routerLink]="['edit']">
         </button>
         <button pButton type="button" label="Удалить" 
           class="ui-button-danger btn-block" icon="fa fa-trash-o"
