UI: sidebar with dashboard-menu, return button, breadcrumb deleted
* clean ts from unused code

--- a/crmapp/frontend/src/app/components/client/client-details/client-details.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details.component.html
@@ -1,18 +1,20 @@
+<p-sidebar [(visible)]="display" [baseZIndex]="10000">
+	<h4 style="font-weight:normal">
+		Главное меню
+	</h4>
+	<app-dashboard-menu></app-dashboard-menu>
+</p-sidebar>
 
-<nav class="breadcrumb">
-	<div class="row">
-		<div class="col">
-			<h5>
-				<strong>
-					<a class="breadcrumb-item" routerLink="/clients">
-						<i class="fa fa-users"></i> Клиенты
-					</a>
-					<span class="breadcrumb-item active">{{client?.alias}}</span>
-				</strong>
-			</h5>
-		</div>
+<div class="ui-g">
+	<div class="ui-g-4">
+		<button pButton type="button" (click)="display = true" icon="fa-bars"></button>
+		<button pButton type="button" label="Вернуться" class="ui-button-info"
+			icon="fa-arrow-circle-o-left" routerLink="../"></button>
 	</div>
-</nav>
+	<div class="ui-g-8">
+		<h4 style="font-weight:normal"><b>{{client.title}}</b></h4>
+	</div>
+</div>
 
 <div>
 	<app-client-details-tabs></app-client-details-tabs>
