--- a/crmapp/frontend/src/app/components/client/client-details/client-details-accounts-tab/client-details-accounts-tab.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-accounts-tab/client-details-accounts-tab.component.html
@@ -1,31 +1,33 @@
 <div class="ui-g-12">
   <div class="ui-g-10">
-    <p-table [value]="accounts" [columns]="columns" [responsive]="true">
-      <ng-template pTemplate="header">
-        <tr>
-          <th style="width:7%;text-align:center">ID</th>
-          <th style="text-align:center">Представление</th>
-          <th style="width:15%;text-align:center">Действует с</th>
-          <th style="width:15%;text-align:center"></th>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-account let-columns="columns">
-        <tr>
-          <td style="text-align:center">{{account.id}}</td>
-          <td style="text-align:start">{{account.presentation}}</td>
-          <td style="text-align:center">{{account.dateStart  | date: 'dd.MM.y'}}</td>
-          <td style="text-align:center">
-            <button pButton type="button" label="Изменить" 
-              class="ui-button-success btn-block" icon="fa fa-edit"
-              [routerLink]="[account?.id, 'edit']">
-            </button>
-          </td>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="summary">
-          Кол-во записей: {{accounts?.length}}
-      </ng-template>
-    </p-table>
+    <p-card>
+      <p-table [value]="accounts" [columns]="columns" [responsive]="true">
+        <ng-template pTemplate="header">
+          <tr>
+            <th style="width:7%;text-align:center">ID</th>
+            <th style="text-align:center">Представление</th>
+            <th style="width:15%;text-align:center">Действует с</th>
+            <th style="width:15%;text-align:center"></th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-account let-columns="columns">
+          <tr>
+            <td style="text-align:center">{{account.id}}</td>
+            <td style="text-align:start">{{account.presentation}}</td>
+            <td style="text-align:center">{{account.dateStart  | date: 'dd.MM.y'}}</td>
+            <td style="text-align:center">
+              <button pButton type="button" label="Изменить" 
+                class="ui-button-success btn-block" icon="fa fa-edit"
+                [routerLink]="[account?.id, 'edit']">
+              </button>
+            </td>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="summary">
+            Кол-во записей: {{accounts?.length}}
+        </ng-template>
+      </p-table>
+    </p-card>
   </div>
   <div class="ui-g-2">
     <button pButton type="button" label="Новый счет" 
@@ -34,63 +36,3 @@
     </button>
   </div>
 </div>
-
-<!-- <p>
-
-<div class="row">
-
-  <div class="col-md-10">
-
-    <div class="card">
-      <div class="card-body"> 
-
-        <table *ngIf="accounts?.length > 0; else noAccounts" class="table table-sm">
-          
-          <thead class="thead-default">
-            <tr>
-              <th class="text-center">ID</th>
-              <th class="text-center">Представление</th>
-              <th class="text-center">Действует с</th>
-              <th class="text-center"></th>
-            </tr>
-          </thead>
-          
-          <tr *ngFor="let account of accounts">
-            <td class="text-center" >{{account.id}}</td>
-            <td class="text-center" >{{account.presentation}}</td>
-            <td class="text-center" >{{account.dateStart | date: 'dd.MM.y'}}</td>
-            <td>
-              <div class="d-flex justify-content-end">
-                <div class="btn-toolbar">
-                  <div class="btn-group mr-2" >
-                    <a class="btn btn-success btn-sm" 
-                      [routerLink]="[account?.id, 'edit']">
-                      <i class="fa fa-edit">
-                        </i> Изменить
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </td>
-          </tr>
-
-        </table>
-
-      </div>
-    </div>
-
-    <ng-template #noAccounts>
-        <div class="alert alert-light" role="alert">
-          <h6 class="lead text-center">
-            <b>Нет ни одного счета в системе ...</b>
-          </h6>
-        </div>
-    </ng-template>
-
-  </div>
-
-  <div class="col-md-2">
-    <app-sidebar [url] = "['add']" title = "Новый счет"></app-sidebar>
-  </div>
-
-</div> -->
