--- a/crmapp/frontend/src/app/components/client/client-details/client-details-addresses-tab/add-address/add-address.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-addresses-tab/add-address/add-address.component.html
@@ -19,7 +19,8 @@
               <b>Действует с:</b>
             </div>
             <div class="ui-grid-col-3">
-              <p-calendar [(ngModel)]="address.dateStart" name="dateStart" 
+              <p-calendar [(ngModel)]="address.dateStart" name="dateStart" placeholder="Дата" 
+                [monthNavigator]="true" [yearNavigator]="true" yearRange="{{years}}"
                 showButtonBar="true" [showIcon]="true" dateFormat="dd.mm.yy"></p-calendar>
             </div>
           </div>
