--- a/crmapp/frontend/src/app/components/client/client-details/client-details.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details.component.html
@@ -12,7 +12,9 @@
 			icon="fa-arrow-circle-o-left" routerLink="../"></button>
 	</div>
 	<div class="ui-g-8">
-		<h4 style="font-weight:normal"><b>{{client.title}}</b></h4>
+		<h4 style="font-weight:normal">
+			<b><ins>{{client.title}}</ins></b>
+		</h4>
 	</div>
 </div>
 
