--- a/crmapp/frontend/src/app/components/client/client-details/client-details-addresses-tab/edit-address/edit-address.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-addresses-tab/edit-address/edit-address.component.html
@@ -28,7 +28,8 @@
               <b>Действует с:</b>
             </div>
             <div class="ui-grid-col-3">
-              <p-calendar [(ngModel)]="address&&address.dateStart" name="dateStart" 
+              <p-calendar [(ngModel)]="address&&address.dateStart" name="dateStart" placeholder="Дата"
+                [monthNavigator]="true" [yearNavigator]="true" yearRange="{{years}}"
                 showButtonBar="true" [showIcon]="true" dateFormat="dd.mm.yy"></p-calendar>
             </div>
           </div>
@@ -44,7 +45,8 @@
         class="ui-button-success btn-block" icon="fa-check-square-o">
       </button>
       <button pButton type="button" label="Удалить" 
-        class="ui-button-danger btn-block" (click)="confirmDeleting()">
+        class="ui-button-danger btn-block" icon="fa-trash-o"
+        (click)="confirmDeleting()">
       </button>
     </div>
   </form>
